--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/LukeMartin-123/Readme_Generator/issues"
   },
-  "homepage": "https://github.com/LukeMartin-123/Readme_Generator#readme"
+  "homepage": "https://github.com/LukeMartin-123/Readme_Generator#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3"
+  }
 }
